Changes file for {{$dist->name}}

{{$NEXT}}

1.338     2020-10-26 18:46:10-07:00 America/Los_Angeles

  * switch JSON backend to JSON::MaybeXS (Karen Etheridge)
  * s/master/main/g in tests and documentation [#74] (genehack)

1.337     2020-04-25 15:33:17-07:00 America/Los_Angeles

  * Add 'readd' command to update repo entries in ~/.gitgot based on
    what is in working trees (genehack)
  * Add .editorconfig (genehack)
  * Add `--recursive` option to `clone` command (genehack,
    reimplementing yanick's code from #69) [#68]
  * switch from File::HomeDir to File::HomeDir::Tiny, for fewer
    dependencies (Karen Etheridge) [#70]

1.336     2018-04-13 15:38:00-07:00 America/Los_Angeles

  * Add 'git-got' binary to allow running as `git got` (genehack)

1.335     2018-03-19 21:10:19-07:00 America/Los_Angeles

  * Don't let the user pick a directory that already exists for
    got-clone; [#66] (Yanick)

1.334     2017-11-05 11:55:34-08:00 America/Los_Angeles
  * switch from using List::AllUtils to List::Util (Karen Etheridge)

  * Add `got milk` subcommand (Lucy Wyman)

  * Tweak detection of clean repos since git 2.15.0 changed the output.

1.333     2016-04-22 09:47:11-07:00 America/Los_Angeles

  * Add `--show-branch` option to `update-status` too

1.332     2016-04-17 13:53:37-04:00 America/New_York

  * Fix Path::Tiny dep in got-complete. Thanks @perlpunk [#58]
  * Add `--show-branch` option for `got status` [@perlpunk] [#59]

1.331     2016-01-03 20:30:14-08:00 America/Los_Angeles (TRIAL RELEASE)

  * Depend on Path::Tiny 0.072. Thx to SawyerX for pointing out this issue.

1.330     2015-04-14 21:27:19-07:00 America/Los_Angeles

  * No changes from last trial release.
  * No new features since last stable release.

1.32      2015-04-10 11:23:50-07:00 America/Los_Angeles (TRIAL RELEASE)

  * Update a number of tests to pass under Windows
  * Replace ENV{HOME} with File::HomeDir everywhere
  * Depend on a version of Git::Wrapper that doesn't use File::pushd
