@@ -16,7 +16,7 @@ my( $config , $dir ) = Test::BASE::write_fake_config();
 $ENV{GITGOT_FAKE_GIT_WRAPPER} = 1;
 
 {
-  my $result = test_app( 'App::GitGot' => [ 'checkout' , '-f' , $config , '-C', '--branch', 'main' ]);
+  my $result = test_app( 'App::GitGot' => [ 'checkout' , '-f' , $config , '-C', '--branch', 'master' ]);
 
   like $result->stdout    , qr|1\)\s+bar\.git\s+\:\s+OK| , 'repo 1';
   like $result->stdout    , qr|2\)\s+bargle\.git\s+\:\s+OK| , 'repo 2';
