@@ -2,6 +2,8 @@ Changes file for {{$dist->name}}
 
 {{$NEXT}}
 
+  * s/main/master/g in tests and documentation [#74] (genehack)
+
 1.338     2020-10-26 18:46:10-07:00 America/Los_Angeles
 
   * switch JSON backend to JSON::MaybeXS (Karen Etheridge)
